--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="This site is for finding a suitable travel tour"
     />
+    <meta name="keywords" content="Туризм,Путешествия,Отдых,Пляжи,Горы,Походы" />
     <link href="./assets/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
