--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 name="sName"
                 id=""
                 placeholder="example@mail.com"
-              / pattern="" required>
+              /  required>
             </div>
 
             <div class="lab_inp">
