--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="tel:" class="nav__link numb">+7 999 999 99 99</a>
       </div>
     </div>
-    <div class="header__inner">
+    <div class="header__inner noscroll">
       <a href="#" class="header__logo">YourTour</a>
       <nav class="header__nav">
         <a href="#ture1" class="nav__link">Туры</a>
