--- a/index.html
+++ b/index.html
@@ -319,24 +319,24 @@
             обучения кадров
           </p>
         </div>
-        <section class="img__line firstLine">
-          <img src="./assets/img/travel_photo/travel photo-1.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-2.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-3.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-4.png" alt="" />
+        <section class="img__line firstLine">    
+          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-1.png" alt="" /></div> 
+          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-2.png" alt="" /> </div>
+          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-3.png" alt="" /> </div>
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-4.png" alt="" /></div>
         </section>
         <section class="img__line secondLine">
-          <img src="./assets/img/travel_photo/travel photo-5.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-6.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-7.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-8.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-13.png" alt="" />
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-5.png" alt="" /></div>        
+          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-6.png" alt="" /></div>       
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-7.png" alt="" /> </div>  
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-8.png" alt="" /> </div>  
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-13.png" alt="" /> </div>  
         </section>
         <section class="img__line thirdLine">
-          <img src="./assets/img/travel_photo/travel photo-9.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-10.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-11.png" alt="" />
-          <img src="./assets/img/travel_photo/travel photo-12.png" alt="" />
+          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-9.png" alt="" /> </div>
+            <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-10.png" alt="" /> </div>
+              <div class="picItem"><img src="./assets/img/travel_photo/travel photo-11.png" alt="" /> </div>
+                <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-12.png" alt="" /> </div>
         </section>
       </div>
 
