--- a/index.html
+++ b/index.html
@@ -320,23 +320,23 @@
           </p>
         </div>
         <section class="img__line firstLine">    
-          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-1.png" alt="" /></div> 
-          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-2.png" alt="" /> </div>
-          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-3.png" alt="" /> </div>
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-4.png" alt="" /></div>
+          <div class="picItem" id="pic1"><img src="./assets/img/travel_photo/travel photo-1.png" alt="" /></div> 
+          <div class="picItem" id="pic2"><img src="./assets/img/travel_photo/travel photo-2.png" alt="" /> </div>
+          <div class="picItem" id="pic3"><img src="./assets/img/travel_photo/travel photo-3.png" alt="" /> </div>
+          <div class="picItem" id="pic4"> <img src="./assets/img/travel_photo/travel photo-4.png" alt="" /></div>
         </section>
         <section class="img__line secondLine">
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-5.png" alt="" /></div>        
-          <div class="picItem"><img src="./assets/img/travel_photo/travel photo-6.png" alt="" /></div>       
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-7.png" alt="" /> </div>  
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-8.png" alt="" /> </div>  
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-13.png" alt="" /> </div>  
+          <div class="picItem" id="pic5"> <img src="./assets/img/travel_photo/travel photo-5.png" alt="" /></div>        
+          <div class="picItem" id="pic6"><img src="./assets/img/travel_photo/travel photo-6.png" alt="" /></div>       
+          <div class="picItem" id="pic7"> <img src="./assets/img/travel_photo/travel photo-7.png" alt="" /> </div>  
+          <div class="picItem" id="pic8"> <img src="./assets/img/travel_photo/travel photo-8.png" alt="" /> </div>  
+          <div class="picItem" id="pic9"> <img src="./assets/img/travel_photo/travel photo-13.png" alt="" /> </div>  
         </section>
         <section class="img__line thirdLine">
-          <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-9.png" alt="" /> </div>
-            <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-10.png" alt="" /> </div>
-              <div class="picItem"><img src="./assets/img/travel_photo/travel photo-11.png" alt="" /> </div>
-                <div class="picItem"> <img src="./assets/img/travel_photo/travel photo-12.png" alt="" /> </div>
+          <div class="picItem" id="pic11"><img src="./assets/img/travel_photo/travel photo-9.png" alt="" /> </div>
+            <div class="picItem" id="pic12"> <img src="./assets/img/travel_photo/travel photo-10.png" alt="" /> </div>
+              <div class="picItem" id="pic13"><img src="./assets/img/travel_photo/travel photo-11.png" alt="" /> </div>
+                <div class="picItem" id="pic14"> <img src="./assets/img/travel_photo/travel photo-12.png" alt="" /> </div>
         </section>
       </div>
 
