--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="This site is for finding a suitable travel tour"
+      content="Этот сайт для поиска подходящего туристического тура"
     />
+    
     <meta name="keywords" content="Туризм,Путешествия,Отдых,Пляжи,Горы,Походы" />
     <link href="./assets/style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,8 +45,10 @@
         <a href="#story" class="nav__link">Истории</a>
       </nav>
       <a href="tel:+7 999 999 99 99"class="nav__link numb">+7 999 999 99 99</a>
-    </div>
-      <div class="intro">
+    </div>  
+    </header>
+ 
+      <section class="intro">
         <div class="container">
           <div class="intro__inner">
             <h1 class="intro__title">Идеальные путешествия существуют</h1>
@@ -56,8 +59,8 @@
             <button class="button">Найти тур</button>
           </div>
         </div>
-      </div>
-    </header>
+      </section>
+  
 
     <main id="ture1">
       <section class="header__main">
@@ -250,7 +253,7 @@
               <input type="checkbox" name="accept" id="check1" class="checkbox"/>
               <label class="fake__check" for="check1"></label>
               <label class="label__text"
-                >Нажимая кнопку, я принимаю условия
+              for="check1" >Нажимая кнопку, я принимаю условия
                 <span><a href="">Лицензионного договора</a></span>
               </label>
             </div>
@@ -278,8 +281,8 @@
               порядка, а также начало повседневной работы по формированию
               позиции позволяет оценить значение модели развития.
             </p>
-            <div class="avtor">
-              <div class="avtor__description">
+            <div class="author">
+              <div class="author__description">
                 <h1>Мария</h1>
                 <span>Тур: Вдали от дома</span>
               </div>
@@ -300,8 +303,8 @@
               плановых заданий в значительной степени обуславливает создание
               модели развития.
             </p>
-            <div class="avtor">
-              <div class="avtor__description">
+            <div class="author">
+              <div class="author__description">
                 <h1>Павел</h1>
                 <span>Тур: Путешествие в горы </span>
               </div>
