fix meadia q 1, added margins 3, used sections 8, fixed card 10, reordered styles 13

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           </div>
         </form>
       </section>
-      <div class="reviews" id="reviews">
+      <section class="reviews" id="reviews">
         <div class="group__title">
           <h1 class="main__title">Отзывы наших <br />путешественников</h1>
           <p>
@@ -312,9 +312,9 @@
             </div>
           </div>
         </section>
-      </div>
+      </section>
 
-      <div class="gallery__travel">
+      <section class="gallery__travel">
         <div class="group__title">
           <h1 class="main__title">Фотографии путешествий</h1>
           <p>
@@ -341,9 +341,9 @@
               <div class="picItem" id="pic13"><img src="./assets/img/travel_photo/travel photo-11.png" alt="" /> </div>
                 <div class="picItem" id="pic14"> <img src="./assets/img/travel_photo/travel photo-12.png" alt="" /> </div>
         </section>
-      </div>
+      </section>
 
-      <div class="travel__stories" id="story">
+      <section class="travel__stories" id="story">
         <div class="group__title">
           <h1 class="main__title">Истории путешествий</h1>
           <p>
@@ -424,7 +424,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <section class="last__main">
         <img src="./assets/img/footer.jpg" alt="#" />
         <div class="details">
